src/objects/TR1__Application__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Email__c</fullName>
        <formula>TR1__Applicant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Mobile__c</fullName>
        <formula>TR1__Applicant__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant_Phone__c</fullName>
        <formula>TR1__Applicant__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Summary__c</fullName>
        <label>Candidate Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Source__c</fullName>
        <label>Job Board Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Website</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Yahoo Search</fullName>
                </value>
                <value>
                    <fullName>Bing Search</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>SoCRA</fullName>
                </value>
                <value>
                    <fullName>ISPE</fullName>
                </value>
                <value>
                    <fullName>SCDM</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>RAPS</fullName>
                </value>
                <value>
                    <fullName>Net-Temps</fullName>
                </value>
                <value>
                    <fullName>NACCB</fullName>
                </value>
                <value>
                    <fullName>Job Fair</fullName>
                </value>
                <value>
                    <fullName>Careerbuilder</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>Ad</fullName>
                </value>
                <value>
                    <fullName>ACRP</fullName>
                </value>
                <value>
                    <fullName>DICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_First_Name__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Phone__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName &amp; &quot; &quot; &amp;  TR1__Job__r.TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Reporting</label>
        <referenceTo>TR1__Job_Reporting__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Application</relationshipLabel>
        <relationshipName>Application</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Job_s_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job&apos;s Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Days_in_Stage__c</fullName>
        <formula>IF(IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c = 0, 1, IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days in Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Opportunity_Discussed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Discussed</label>
        <referenceTo>TR1__Opportunity_Discussed__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Reject_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerApplicationReject?Id=&apos;&amp;Id&amp;&apos;&amp;retURL=/&apos;&amp;TR1__Applicant__c&amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Applicant__c, IMAGE(&apos;/resource/TR1__Reject&apos;, &apos;Revert&apos;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rjt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notification__c</fullName>
        <label>Rejection Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Rejection Email</fullName>
                </value>
                <value>
                    <fullName>Job Owner Will Notify</fullName>
                </value>
                <value>
                    <fullName>Contact Owner Will Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Job Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Stage_End_Date__c</fullName>
        <label>Stage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Start_Date__c</fullName>
        <label>Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <formula>TEXT(TR1__Job_Reporting__r.TR1__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Job Manager Stage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Submit_And_Email_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSubmittal?conid=&apos;&amp; TR1__Applicant__c &amp;&apos;&amp;jobconid=&apos;&amp; TR1__Job__r.TR1__Contact__c &amp;&apos;&amp;email=&apos;&amp; TR1__Job_Contact_Email__c &amp;&apos;&amp;jobid=&apos;&amp;TR1__Job__c&amp;&apos;&amp;retURL=/&apos;&amp; TR1__Applicant__c, IMAGE(&apos;/resource/TR1__sumittalwithemail&apos;, &apos;Submit And Email&apos;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S A E</label>
        <type>Text</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Applicant__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Status__c</columns>
        <columns>TR1__Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APP-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <recordTypes>
        <fullName>TR1__Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>